v34 2019-04-01

	* Rearranged include directory structure to make it easier to use, and
	  to write, adapters for unit test frame works. Now, if you want to
	  use Trompeloeil with, for example, the 'doctest' unit testing frame
	  work, you include

	  #include <doctest.h>
	  #include <doctest/trompeloeil.hpp>

	  The old adaptation mechanisms still work. See issue #118

	* Support compilation without RTTI support. This makes error reporting
	  from deathwatched<> violations less informative (it cannot mention
	  the name of the type of the object) but has no other impact on
	  functionality.

	* Silenced g++-4.9 -Wmissing-field-initializers warning with libc++.

	* Fixed issue #121 where mutexes were created in each translation unit

	* Fixed issue #124 where sequence objects were not properly protected
	  against access from several threads.

	* Silenced several warnings in the Trompeloeil self test programs.

v33 2019-01-21

	* Silenced noisy g++-7 -Wuseless-cast warning

	* Fixed a bug where a mocked function would not compile if a parameter
	  had an operator==(nullptr) returning a type that is not convertible
	  to bool.

	* Fixed a bug where a mocked function would not compile if a parameter
	  was a range with iterators to rvalue proxy objects, like vector<bool>.

	* Mock objects can be move constructed if they have a static constexpr
	  bool member named trompeloeil_movable_mock with value = true.

	* ANY() matcher gives a short descriptive compilation error message
	  when the type is an array type (it would silently decay into a
	  pointer type, which can be very confusing.)

	* When compiled with preprocessor macro
	  TROMPELOEIL_USER_DEFINED_COMPILE_TIME_REPORTER, a `extern`
	  `trompeloeil::reporter` is declared from `trompeloeil.hpp`.
	  Thanks @rcdailey

	* Minor documentation updates.

	* Update pattern in expectation_with_wrong_type.cpp to match
	  new error message from GCC '9' at svn revision 264700.

v32 2018-07-23
